# AIRA-Virtual-receptionist

./: .gitignore  README.md  implementation_plan.md  s -ExecutionPolicy RemoteSigned) ; (& cUsersAdministratorDesktopCPU-compatible-AI-appsserver.venvScriptsActivate.ps1)  task.md
apps/client/src/app/: page.tsx
apps/client/src/app/admin/employees/: page.tsx
apps/client/src/components/: CameraStream.tsx  TalkingHead.tsx  VoiceActivityDetector.tsx
apps/client/src/contexts/: WebSocketContext.tsx
apps/client/src/hooks/: useFaceVerification.ts
apps/server/: .gitignore  check_db_direct.py  check_gpu.py  client_context.py  database.py  implementation_plan_face_checkin_visitor  main.py  meeting_scheduler.py  package.json  pyproject.toml
apps/server/core/: lifespan.py
apps/server/models/: groq_processor.py  ollama_processor.py  tts_processor.py  whisper_processor.py
apps/server/receptionist/: __init__.py  database.py  migrate_visitors.py  models.py  office.db-journal  seed_data.py
apps/server/routes/: api_routes.py  employee_routes.py  websocket_routes.py
apps/server/services/: calendar_service.py  face_recognition_service.py  notification_service.py  notify_email.py  notify_slack.py  notify_teams.py  processor_service.py  query_router.py  targeted_scheduler.py  wake_word_service.py
